got call to cmd working but needs cleaning up